# QT-IVI

./: CMakeLists.txt  Main.qml  README.md  assets.qrc  main.cpp
assets/: Old_rusty_car.qml
assets/meshes/: object006_Material__294_0_mesh.mesh  object007_Material__295_0_mesh.mesh  plane001_Material__316_0_mesh.mesh
html/: map.html
qml/HVAC/: HVAC.qml  HVACState.qml  qmldir
qml/applauncher/: DashCard.qml
qml/media/: AudioManager.cpp  AudioManager.h  AudioPage.qml  BluetoothAgent.h  BluetoothManager.cpp  BluetoothManager.h  RadioManager.cpp  RadioManager.h  VideoManager.cpp  VideoManager.h  qmldir
qml/navigation/: Navi.qml  qmldir
qml/phone/: PhoneManager.cpp  PhoneManager.h
qml/settings/: settings.qml
qml/settings/backend/: settingsmanager.cpp  settingsmanager.h  soundmanager.cpp  soundmanager.h  wifimanager.cpp  wifimanager.h
qml/settings/qml/components/: SettingsGroup.qml  StyledSlider.qml  StyledToggle.qml
qml/settings/qml/pages/: ThemePage.qml  VolumePage.qml
qml/settings/qml/sidebar/: Sidebar.qml
qml/weather/: DetailCard.qml  MainScreen.qml  WeatherData.h  networkhandler.cpp  networkhandler.h  weather.qml  weatherviewmodel.cpp  weatherviewmodel.h
qml/youtube/: Youtube.qml
